# arco

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: calibration.rs  cycle.rs  dynamics.rs  hypotheses.rs  lib.rs  main.rs  metrics.rs  observation.rs  rules.rs  state.rs  universe.rs
