[package]
name = "arco"
version = "0.1.0"
edition = "2024"
description = "Automated Research into Computational Ontologies — a platform for discovering the conditions under which computation emerges"
repository = "https://github.com/kvernet/arco"
license = "MIT"

[dependencies]
ndarray = "0.17"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["derive"] }
sha2 = "0.11"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
